2006-07-23 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j93-UNSTABLE

  * Hide RandomBlock Source in setup as its currently unused.

 * CSS things in Setup.

 * Make some Texts tranlateable

 * Some layout and wording things.

2006-07-23 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j92-UNSTABLE

 * Fix: Popup for frames didnt work in frames for randomblock.

2006-07-21 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j91-UNSTABLE

 * Fix: drawSelect in slideshow misbehaved and selected the wrong.
 
 * Use Horde Browser in slideshow to avoid document.write()
   As a result drawSelect() uses now always pretty printing.

 * drawSelect() now also uses always pretty printing.

 * Found _() -> gTranslate()

2006-07-21 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j90-UNSTABLE

 * Added new icons for navigation

 * Converted a couple of png icons to gif icons (DARN IE !)

2006-07-21 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j89-UNSTABLE

 * Added icons for notice messages.

2006-07-21 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j88-UNSTABLE

 * Removed $class param from gInput

 * Little layout changes

2006-07-20 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j87-UNSTABLE

 * Change: Splitted Add_URL into "URL" and "from local Server"

 * NEW: Added YAHOO! YUI , AJAX Autocomplete.
	- Use of horde browser class to detect wether Autocomplete is supported.
	- Added CSS
	- Currently only for local paths

 * NEW: Add possibility to define legal pathes for upload from local server.
	If a legal path is defined autocomplete in the upload dialog is used.

 * NEW: js/multiInput.js.php
 
2006-07-20 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j86-UNSTABLE

 * UPS: forget to add rebuild_thumbs.php into SVN with b1-j72.

2006-07-20 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j85-UNSTABLE

 * NEW: Added Browser.php class from the HORDE (http://www.horde.org) framework.
        Credits added in the classes/horde/ folder.

2006-07-13 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j84-UNSTABLE

 * NEW: Added fs_fileIsHidden() to platform functions.
