@@ -469,7 +469,12 @@ for ($i = $start; $i <= $end; $i++) {
     }
 }
 
+$theme = $gallery->app->theme;
+if(!fs_file_exists(GALLERY_BASE . "/templates/$theme/gallery.tpl.default")) {
+    $theme = 'classic';
+}
+
 define('READY_TO_INCLUDE', 'DISCO');
-require(dirname(__FILE__) .'/templates/gallery.tpl.default');
+require(GALLERY_BASE ."/templates/$theme/gallery.tpl.default");
 
 ?>
