@@ -1,6 +1,6 @@
 <?php
 // $Id: wrapper.footer.default 13490 2006-04-18 12:36:36Z jenst $
-// This footer file detects whether Gallery is embedded in any 
+// This footer file detects whether Gallery is embedded in any
 // known PHP applications and then decorates Gallery appropriately.
 
 global $GALLERY_EMBEDDED_INSIDE_TYPE;
@@ -40,12 +40,12 @@ switch($GALLERY_EMBEDDED_INSIDE_TYPE) {
 		global $db;
 		global $do_gzip_compress;
 		global $lang;
-		
+
 		include (PHPBB_ROOT_PATH . "includes/page_tail.php");
 	break;
 
 	case 'GeekLog':
-	
+
 	/*
 	** We can control whether we see the right side blocks
 	** by setting passing a parameter to COM_siteFooter.
@@ -62,10 +62,11 @@ if (isDebugging()) {
 	$infoText = sprintf(_("Debug ON ! Level %s"), $gallery->app->debuglevel) . '<br>';
 	if (empty($GALLERY_EMBEDDED_INSIDE_TYPE)) {
 		$infoText .= 'Standalone';
+		$infoText .= "; Skin: {$gallery->app->skinname}";
 	}
 	else {
 		$infoText .= 'Embedded in: '. $GALLERY_EMBEDDED_INSIDE_TYPE;
-		
+
 		switch($GALLERY_EMBEDDED_INSIDE_TYPE) {
 		    case 'phpnuke':
 		        break;
@@ -80,7 +81,9 @@ if (isDebugging()) {
 		        break;
 		}
 	}
-	
+
+	$infoText .= "; Theme: {$gallery->app->theme}";
+
     echo infoBox(array(array('text' => $infoText, 'type' => 'information')));
 }
 
