@@ -1,6 +1,12 @@
+2006-07-23 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j94-UNSTABLE
+
+ ***** NEW ******
+
+ * Mainpage is now themeable.
+ 
 2006-07-23 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j93-UNSTABLE
 
-  * Hide RandomBlock Source in setup as its currently unused.
+ * Hide RandomBlock Source in setup as its currently unused.
 
  * CSS things in Setup.
 
